--- a/index.html
+++ b/index.html
@@ -663,8 +663,8 @@
           date: "2025-06-11"
         },
         {
-          leaveCode: "GPL88223791200",
-          idNumber: "1118202231",
+          leaveCode: "G775955712",
+          idNumber: "11182123231",
           name: "   نواف سعيد فازع المطيري        ",
           from: "2025-06-03",
           to: "2025-06-03",
@@ -3054,4 +3054,5 @@
   </script>
 </body>
 </html>
+
 
