--- a/index.html
+++ b/index.html
@@ -995,7 +995,7 @@
         {
           leaveCode: "GSL59953255328",
           idNumber: "1090361872",
-          name: " هنادي محمد بالغيث القرني  ",
+          name: " فهد محمد بالغيث القرني  ",
           from: "2025-06-28",
           to: "2025-06-28",
           days: "1",
@@ -3054,5 +3054,6 @@
   </script>
 </body>
 </html>
+
 
 
