--- a/index.html
+++ b/index.html
@@ -742,7 +742,7 @@
         {
           leaveCode: "GSL87854566931",
           idNumber: "1069602009",
-          name: "      عماد عزيز محمد المالكي       ",
+          name: "      فهد عزيز محمد المالكي       ",
           from: "2025-05-31",
           to: "2025-05-31",
           days: "1",
@@ -3054,6 +3054,7 @@
   </script>
 </body>
 </html>
+
 
 
 
