--- a/index.html
+++ b/index.html
@@ -531,6 +531,18 @@
           date: "2025-06-11"
         },
         {
+          leaveCode: "GSL55812331",
+          idNumber: "213366982",
+          name: "      إبراهيم علي محمد فهد   ",
+          from: "2025-06-11",
+          to: "2025-06-17",
+          days: "7",
+          doctor: "  محمد الشهراني  ",
+          title: " طب بشري ",
+          date: "2025-06-11"
+        },
+        {
+        {
           leaveCode: "GSL55886151331",
           idNumber: "2133546982",
           name: "      إبراهيم علي محمد الزرقاني   ",
@@ -663,8 +675,8 @@
           date: "2025-06-11"
         },
         {
-          leaveCode: "G775955712",
-          idNumber: "11182123231",
+          leaveCode: "GPL88223791200",
+          idNumber: "1118202231",
           name: "   نواف سعيد فازع المطيري        ",
           from: "2025-06-03",
           to: "2025-06-03",
@@ -742,7 +754,7 @@
         {
           leaveCode: "GSL87854566931",
           idNumber: "1069602009",
-          name: "      فهد عزيز محمد المالكي       ",
+          name: "      عماد عزيز محمد المالكي       ",
           from: "2025-05-31",
           to: "2025-05-31",
           days: "1",
@@ -995,7 +1007,7 @@
         {
           leaveCode: "GSL59953255328",
           idNumber: "1090361872",
-          name: " فهد محمد بالغيث القرني  ",
+          name: " هنادي محمد بالغيث القرني  ",
           from: "2025-06-28",
           to: "2025-06-28",
           days: "1",
@@ -3054,7 +3066,4 @@
   </script>
 </body>
 </html>
-
-
-
 
