--- a/index.html
+++ b/index.html
@@ -2822,7 +2822,7 @@
         {
           leaveCode: "GSL55853988820",
           idNumber: "1122139015",
-          name: "خالد عزيز محمد المالكي",
+          name: "خالد عزيز محمد فهد",
           from: "2025-08-01",
           to: "2025-08-01",
           days: "1",
