--- a/index.html
+++ b/index.html
@@ -531,18 +531,6 @@
           date: "2025-06-11"
         },
         {
-          leaveCode: "GSL55812331",
-          idNumber: "213366982",
-          name: "      إبراهيم علي محمد فهد   ",
-          from: "2025-06-11",
-          to: "2025-06-17",
-          days: "7",
-          doctor: "  محمد الشهراني  ",
-          title: " طب بشري ",
-          date: "2025-06-11"
-        },
-        {
-        {
           leaveCode: "GSL55886151331",
           idNumber: "2133546982",
           name: "      إبراهيم علي محمد الزرقاني   ",
@@ -2822,7 +2810,7 @@
         {
           leaveCode: "GSL55853988820",
           idNumber: "1122139015",
-          name: "خالد عزيز محمد فهد",
+          name: "خالد عزيز محمد المالكي",
           from: "2025-08-01",
           to: "2025-08-01",
           days: "1",
